# discord-coding-bot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  devbot-architecture-v4-final.md  package-lock.json  package.json  pyproject.toml  requirements.txt  smoke_test.py  test_auto_restart.py  test_full_pipeline.py  test_healthcheck.py  test_minimax.py  test_pipeline_workflow.py  test_projects.py  test_prompt.py  test_router_import.py  test_runner.py  test_shell_executor.py  test_support.py  test_todo.py  test_user_scenarios.py
.github/workflows/: ruff.yml
devbot/: cli.py  healthcheck.py  history.py  main.py
devbot/bot/: client.py  commands.py  formatter.py
devbot/config/: default_config.yaml  settings.py
devbot/context/: files.py  loader.py  project.py
devbot/executor/: auto_restart.py  manager.py  runner.py  stream.py  stream_parser.py
devbot/executor/adapters/: base.py  claude_code.py  codex.py  factory.py  gemini_cli.py  qwen_cli.py
devbot/executor/shell/: __init__.py  blocklist.py  executor.py  platform.py
devbot/llm/: router.py  tools_schema.py
devbot/todo/: __init__.py  archiver.py  executor.py  models.py  parser.py  validator.py
devbot/workflow/: __init__.py  default_roles.yaml  default_workflows.yaml  models.py  pipeline.py  prompts.py  registry.py  store.py
docs/readme/: README.es.md  README.zh-CN.md
src/: index.js
src/backends/: cli.js  codex.js  gemini.js  index.js
src/config/: env.js
src/core/: discordStreamer.js  state.js  utils.js
(+11 files in other folders)
